changing the upload UI

--- a/ProductCheck/ProductCheck/templates/product_check/home.html
+++ b/ProductCheck/ProductCheck/templates/product_check/home.html
@@ -30,9 +30,11 @@
                 <div class="input-field second-warp">
                     {% csrf_token %}
                     <input class="upload-btn" type="file" id="file1" name="csv_file" placeholder="upload CSV file">
+                </div>
+                <div class="input-field third-wrap">
                     <button class="btn-upload" type="submit">Upload</button>
                 </div>
-            </div>   
+            </div>
         </form>
     </div>
 </body>
